# galsynthspec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: black.yml  continuous_integration.yml  docker.yml  pylint.yml
galsynthspec/: paths.py
galsynthspec/cli/: wrappers.py
galsynthspec/datamodels/: __init__.py  fitresult.py  galaxy.py  photometry.py  result.py
galsynthspec/download/: __init__.py  all.py  galex.py  ps1.py  sdss.py  twomass.py  wise.py
galsynthspec/model/: __init__.py  configure.py  sps.py
galsynthspec/plotting/: __init__.py  corner.py  sed.py
galsynthspec/run/: __init__.py  analyse.py  fit.py  run.py
galsynthspec/skyportal/: __init__.py  base_client.py  query.py
galsynthspec/utils/: __init__.py  extinction.py  predict.py  query.py  tns.py
tests/: test_run.py
tests/test_data/: synthetic_photometry.json
